# streamlit-framework-template

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  DEPLOYMENT.md  OVERVIEW.md  PROJECT_OVERVIEW.md  QUICKSTART.md  README.md  TESTING.md  app.py  pyproject.toml  requirements.txt  setup.sh
components/: __init__.py  footer.py  user_management.py
core/: __init__.py  auth.py  database.py  session.py
pages/: 1_👤_User_Management.py  2_📄_XML_Generator.py
scripts/: init_db.py
streamlit_app/: __init__.py  app.py  cli.py
streamlit_app/.streamlit/: config.toml
streamlit_app/components/: __init__.py  footer.py  user_management.py
streamlit_app/config/: app_config.py
streamlit_app/core/: __init__.py  auth.py  database.py  session.py
streamlit_app/pages/: 1_👤_User_Management.py  2_Account_Opening_Request_Generator.py  2_📄_XML_Generator.py  3_XML_Generator.py
streamlit_app/scripts/: init_db.py
streamlit_app/static/: custom_style.css
